<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yut</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sticks">Stick animation</string>
    <string name="rollSlot">Slot displaying roll</string>
    <string name="seal">Seal</string>
    <string name="penguin">Penguin</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="seal_icon">Seal Icon</string>
    <string name="penguin_icon">Penguin Icon</string>
    <string name="finish">Finish Button</string>
    <string name="soon">Coming Soon!</string>
    <string name="click_me">Press me!</string>
    <string name="click_yellow">Press a yellow tile to move</string>
    <string name="any_seal">Press any jumping seal</string>
    <string name="any_penguin">Press any jumping penguin</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
