<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/board_clear"
                tools:context="com.jeffreychan.yutnori.BoardActivity">

    <ImageView
        android:contentDescription="@string/sticks"
        android:layout_width="210dp"
        android:layout_height="300dp"
        android:id="@+id/sticks"
        android:visibility="invisible"
        android:layout_centerInParent="true"  />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/screenLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ad_view"
        android:weightSum="10" >

        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="7"
            android:background="@color/DarkerBlue" >

            <ImageView
                android:contentDescription="@string/seal_icon"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/seal_icon"
                android:background="@drawable/seal_icon"
                android:layout_margin="5dp"  />

            <ImageView
                android:contentDescription="@string/player1"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:id="@+id/player1"
                android:background="@drawable/player1"
                android:layout_margin="10dp"  />

            <ImageView
                android:contentDescription="@string/seal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/seal1"
                android:background="@drawable/seal1"/>
            <ImageView
                android:contentDescription="@string/seal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/seal2"
                android:background="@drawable/seal1" />
            <ImageView
                android:contentDescription="@string/seal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/seal3"
                android:background="@drawable/seal1"/>
            <ImageView
                android:contentDescription="@string/seal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/seal4"
                android:background="@drawable/seal1"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/rollButton"
            android:background="@drawable/rollbutton"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            />

        <Space
            android:id="@+id/rollBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:weightSum="7"
            android:background="@color/LighterBlue">

            <ImageView
                android:contentDescription="@string/penguin_icon"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/penguin_icon"
                android:background="@drawable/penguin_icon"
                android:layout_margin="5dp" />

            <ImageView
                android:contentDescription="@string/player2"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:id="@+id/player2"
                android:layout_margin="10dp"
                android:background="@drawable/player2" />

            <ImageView
                android:contentDescription="@string/penguin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/penguin1"
                android:background="@drawable/penguin1"/>
            <ImageView
                android:contentDescription="@string/penguin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/penguin2"
                android:background="@drawable/penguin1" />
            <ImageView
                android:contentDescription="@string/penguin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/penguin3"
                android:background="@drawable/penguin1"/>
            <ImageView
                android:contentDescription="@string/penguin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/penguin4"
                android:background="@drawable/penguin1"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/secondLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ad_view"
        android:gravity="center"
        android:weightSum="10" >

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"/>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/internalSecondLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:weightSum="5" >
            <Space
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                />
            <ImageView
                android:contentDescription="@string/seal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/playerIcon"
                android:background="@drawable/seal1"
                android:visibility="invisible"
                />
            <ImageView
                android:contentDescription="@string/finish"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:id="@+id/finish"
                android:background="@drawable/finish"
                android:visibility="invisible"
                />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>


    </LinearLayout>

</RelativeLayout>